Refs #8247; cleaned-up javascript file of effects that are no longer needed; modified width and height of coverflow pop-up player now that the dimensions are different; removed checking of special link from eea-mediacentre, search instead of given id

--- a/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
+++ b/trunk/eea.mediacentre/branches/plone4/src/eea/mediacentre/skins/eea_multimedia/eea.multimedia.css
@@ -103,15 +103,15 @@ h1#player-title {
 }
 
 #media-player {
-    width:675px;
-    height:400px;
+    width:650px;
+    height:375px;
     background-color:#FFFFFF;
     position:relative; 
 }
 
 #media-flowplayer {
     width:100%;
-    height:373px;
+    height:360px;
 }
 
 #multimedia-vids {
